2023-07-13T00:54:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5537894567 # 1718
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-13
* notice: last 14d: unq all: 20 42
* notice: prev accum: outdated-unq outdated-all / unq all: 1358 4743 / 1404 4819
* notice: next accum: outdated-unq outdated-all / unq all: 1377 4777 / 1404 4819
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-06-28] / []

2023-07-12T16:10:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5533919535 # 1717
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-12
* notice: last 14d: unq all: 20 43
* notice: prev accum: outdated-unq outdated-all / unq all: 1358 4743 / 1404 4818
* notice: next accum: outdated-unq outdated-all / unq all: 1358 4743 / 1404 4819
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -2 -4 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-06-28 2023-07-12]

2023-07-12T08:11:43Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5529175436 # 1716
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-07-12
* notice: last 14d: unq all: 22 46
* notice: prev accum: outdated-unq outdated-all / unq all: 1358 4743 / 1403 4817
* notice: next accum: outdated-unq outdated-all / unq all: 1358 4743 / 1404 4818
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -16 -29 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-06-28 2023-07-12]

2023-07-12T00:53:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5526355425 # 1715