@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-06-30T00:49:25Z",
-  "count" : 3,
+  "timestamp" : "2023-07-13T08:11:22Z",
+  "count" : 2,
   "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -0, +3 ],
+  "count_decinc" : [ -1, +3 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
