@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-07-13T00:54:22Z",
+  "timestamp" : "2023-07-13T08:11:22Z",
   "count_outdated" : 4777,
   "uniques_outdated" : 1377,
-  "count" : 4819,
-  "uniques" : 1404,
+  "count" : 4834,
+  "uniques" : 1413,
   "clones" : [
     {
       "timestamp": "2023-06-29T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 0, 3 ],
+      "count_decinc": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
@@ -103,6 +103,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-13T00:00:00Z",
+      "count": 15,
+      "count_minmax": [ 15, 15 ],
+      "count_decinc": [ 0, 15 ],
+      "uniques": 9,
+      "uniques_minmax": [ 9, 9 ],
+      "uniques_decinc": [ 0, 9 ]
     }
   ]
 }
