@@ -1,10 +1,10 @@
 {
-  "count": 42,
-  "uniques": 20,
+  "count": 56,
+  "uniques": 28,
   "clones": [
     {
       "timestamp": "2023-06-29T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 2
     },
     {
@@ -56,6 +56,11 @@
       "timestamp": "2023-07-12T00:00:00Z",
       "count": 2,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-13T00:00:00Z",
+      "count": 15,
+      "uniques": 9
     }
   ]
 }
